<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/nama"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/model_foto_url"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="4dp"
            android:layout_gravity="center"
                android:src="@drawable/ic_place_holder"   />

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/description"
                android:textSize="14sp" />

            <Button
                android:id="@+id/tombolUntukLihatDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LIHAT DETAIL"/>

        </LinearLayout>
        <!--    <androidx.appcompat.widget.AppCompatButton-->
        <!--        android:id="@+id/tombol_masuk"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/btn_masuk"-->
        <!--        android:layout_marginBottom="15dp"-->
        <!--        style="@style/TombolAbu"-->
        <!--        android:alpha="1"-->
        <!--        app:layout_constraintBottom_toTopOf="@id/tidak_punya_akun"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        />-->

    </androidx.cardview.widget.CardView>
</LinearLayout>