<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fahmi.aplikasistoryfahmi.LoginActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/teksview_masuk_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/masuk_judul"
        style="@style/Judul"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/teksview_masuk_sub_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/masuk_sub_judul"
        style="@style/Sub_judul"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teksview_masuk_judul"/>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/input_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:hint="@string/masuk_email"-->
<!--        style="@style/TeksInputLayout"-->
<!--        android:alpha="1"-->
<!--        app:startIconDrawable="@drawable/ikon_bunder_akun"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/teksview_masuk_sub_judul">-->


<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edit_teks_login_email"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:alpha="1"-->
<!--            style="@style/TeksInputEditText"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/input_sandi"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:hint="@string/sandi"-->
<!--        style="@style/TeksInputLayout"-->
<!--        android:alpha="1"-->
<!--        app:startIconDrawable="@drawable/ikon_gembok"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/input_email">-->

    <com.fahmi.aplikasistoryfahmi.EditTeksEmail
        android:id="@+id/edit_teks_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tombol_masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teksview_masuk_sub_judul" />


    <com.fahmi.aplikasistoryfahmi.MyEditText
        android:id="@+id/edit_teks_login_sandi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_teks_login_email" />

<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <TextView
        android:id="@+id/lupa_sandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lupa_sandi"
        android:textAlignment="textEnd"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_teks_login_sandi"/>


<com.fahmi.aplikasistoryfahmi.MyButton
    android:id="@+id/tombol_masuk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:text="@string/btn_masuk"
    android:layout_marginBottom="15dp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/tidak_punya_akun"
    app:layout_constraintStart_toStartOf="parent" />




    <TextView
        android:id="@+id/tidak_punya_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tidak_punya_akun"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        style="@style/Sub_judul"
        android:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>